--- a/css/login.css
+++ b/css/login.css
@@ -7,10 +7,12 @@
 
 
 .Midcon {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 150px;
   padding: 50px 0;
   width: 1120px;
-  height: auto;
+  height: 400px;
   background-color: whitesmoke;
 }
 
@@ -36,8 +38,8 @@
 }
 
 .sel {
-  color: #e23703 !important;
-  border-bottom: 2px solid#e23703;
+  color: #0394e2 !important;
+  border-bottom: 2px solid#0394e2;
 }
 
 .reg {
@@ -112,7 +114,7 @@
   line-height: 50px;
   color: #fff;
   font-size: 20px;
-  background: #e23703;
+  background: #0394e2;
   border: 0px;
   margin-left: 85px;
   cursor: pointer;
